redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2.1
        command:
        - /bin/sh
        - -c
        - |
          echo "Starting Redis with password from secret...";
          redis-server --requirepass $REDIS_PASSWORD
        ports:
        - containerPort: 6379
          name: tcp
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: test
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: tcp
  selector:
    app: redis
  type: ClusterIP
